k8s/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: predictmyfuture
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      nodeSelector:
        workload: predct
      containers:
        - name: server
          image: predictmyfuture.azurecr.io/server:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "3Gi"
              cpu: "2"
