k8s/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: predictmyfuture
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
